--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "kang-game-server",
+  "name": "kang-game",
   "version": "1.0.0",
-  "private": true,
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.0",
-    "socket.io": "^4.7.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.1.1",
+    "socket.io": "^4.7.5",
+    "dotenv": "^16.4.5"
   }
 }
