--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "kang-game",
   "version": "1.0.0",
+  "description": "Thai Kang Online Game",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "express": "^4.19.2",
-    "mongoose": "^8.1.1",
     "socket.io": "^4.7.5",
+    "mongoose": "^8.1.1",
     "dotenv": "^16.4.5"
   }
 }
