--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "kang-game",
   "version": "1.0.0",
+  "description": "Thai Kang Online",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.5"
   }
 }
