--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "kang-game",
   "version": "1.0.0",
-  "description": "Thai Kang Online",
-  "main": "index.js",
+  "main": "server/app.js",
   "scripts": {
-    "start": "node index.js"
-  },
-  "engines": {
-    "node": "18.x"
+    "start": "node server/app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.2",
+    "mongoose": "^8.0.0"
   }
 }
