--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "cors": "^2.8.5"
   }
 }
