--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "kang-game",
+  "name": "kang-game-demo",
   "version": "1.0.0",
+  "description": "Thai Kang Card Game DEMO",
+  "main": "server/app.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server/app.js"
   },
