--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,2 @@
-PORT=3001
-MONGODB_URI=your_mongodb_connection_string
-JWT_SECRET=kang_secret_2024
+PORT=3000
+MONGODB_URI=mongodb+srv://ffafang65_db_user:0991239216@cluster0.nronuv9.mongodb.net/kang_game?retryWrites=true&w=majority
